<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/widget_color_white"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/common_confirm_dialog_bg"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="30dp"
            android:fontFamily="@font/fzy4jw"
            android:gravity="center"
            android:text="@string/widget_dialog_eva_record_permission_confirm_title"
            android:textColor="@color/widget_color_gray_1"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/widget_bg_dialog_eva_record_permission_confirm_left_btn_16"
                android:fontFamily="@font/fzy4jw"
                android:gravity="center"
                android:text="@string/widget_dialog_eva_permission_confirm_cancel"
                android:textColor="@color/widget_color_FA6400"
                android:textSize="16sp" />

            <View
                android:id="@+id/view_empty"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/widget_bg_dialog_eva_record_permission_confirm_right_btn_16"
                android:fontFamily="@font/fzy4jw"
                android:gravity="center"
                android:text="@string/widget_dialog_eva_permission_confirm_setting"
                android:textColor="@color/widget_color_white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fzy3jw"
                android:text="@string/widget_dialog_eva_record_permission_micro_help"
                android:textColor="@color/widget_color_gray_3"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fzy3jw"
                android:text="@string/widget_dialog_eva_record_permission_micro_jump"
                android:textColor="@color/widget_color_FA6400"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>